fixed icons and alignment

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 }
 
 @keyframes fadeOut {
-    100% { opacity: 1; }
+    0% { opacity: 1; }
     100% { opacity: 0; }
 }
 
@@ -36,21 +36,13 @@ body {
     font-family: 'Hubot-Sans';
 }
 
+a { color: inherit; } 
+
+/* classes */
+
 .container {
     width: 100vw;
     height: 100vh;
-}
-
-.box {
-    margin-top: 50vh;
-    height: 100vh;
-    transform: translateZ(0);
-    background-color: rgb(14,17,22);
-    color: rgb(202, 209, 216);
-}
-
-.box.visible {
-    opacity: 1;
 }
 
 .name {
@@ -59,9 +51,11 @@ body {
     justify-content: center;
     text-align: center;
     height: 100vh;
+    animation-name: fadeIn;
+    animation-duration: 5s;
 }
 
-.a-little-about-me {
+.about-me {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,7 +63,12 @@ body {
     height: 100vh;
 }
 
-.codeBlock {
+.code-block {
+    margin-top: 50vh;
+    height: 100vh;
+    transform: translateZ(0);
+    background-color: rgb(14,17,22);
+    color: rgb(202, 209, 216);
     display: flex;
     flex-direction: column;
     line-height: 1.25;
@@ -78,77 +77,13 @@ body {
     height: 100vh;
     align-items: center;
     font-size: 18px;
-    /*
-    border: 1px solid rgb(49, 54, 60);
-    border-radius: 5px;
-     */
 }
 
 .social {
-    line-height: 1.25;
+    display: flex;
     height: 100vh;
+    width: 100vw;
     align-items: center;
-}
-
-.discordBlock {
-    display: inline-block;
-    padding: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: rgb(23, 27, 33);
-    border-radius: 5px;
-    float: left;
-    height: 25vh;
-    margin-bottom: 5%;
-    justify-content: center;
-    text-align: center;
-    width: 90vw;
-    vertical-align: middle;
-}
-
-.discord-text {
-    color: rgb(241, 168, 100);
-    font-size: 4em;
-}
-
-.linkedinBlock {
-    display: inline-block;
-    padding: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: rgb(23, 27, 33);
-    border-radius: 5px;
-    float: left;
-    height: 25vh;
-    margin-bottom: 5%;
-    justify-content: center;
-    text-align: center;
-    vertical-align: middle;
-    width: 90vw;
-}
-
-.linkedin-text {
-    color: rgb(241, 168, 100);
-    font-size: 4em;
-}
-
-.twitterBlock {
-    display: inline-block;
-    padding: 10px;
-    background-color: rgb(23, 27, 33);
-    border-radius: 5px;
-    float: left;
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 25vh;
-    margin-bottom: 5%;
-    justify-content: center;
-    text-align: center;
-    vertical-align: middle;
-    width: 90vw;
-}
-
-.twitter-text {
-    color: rgb(241, 168, 100);
-    font-size: 4em;
+    flex-direction: row;
+    justify-content: space-around;
 }
